fixed z-index for navbar

--- a/static/css/slashroot-fullpage.css
+++ b/static/css/slashroot-fullpage.css
@@ -64,6 +64,7 @@ footer {
 
 #header {
     top:0px;
+    z-index:100;
 }
 
 #header ul {
